Replace the ApiKeyFromEnvProbe subprocess with JUnit Pioneer's @SetEnvironmentVariable
The subprocess-based test worked but was heavier than necessary. JUnit
Pioneer is JUnit 5's equivalent of JUnit 4's System Rules EnvironmentVariables
rule: it reflectively sets the env var for one test method, restoring it
after. Needs --add-opens java.base/java.util and java.lang=ALL-UNNAMED on
surefire's argLine (root pom) since Java 17+ blocks that reflection by
default. Coverage on ApiKey.java stays at 100% lines/branches.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>